[package]
name = "serial-checker"
version = "0.1.0"
edition = "2021"
description = "System information checker with Ratatui TUI (Windows)"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
winreg = "0.55"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
]}

[[bin]]
name = "serial-checker"
path = "src/main.rs"
